// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderRelationshipPresenceSearch transformRelationshipPresenceToDSL function Absence operation 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.relationships.organism.data.id",
      },
    },
  },
}
`;

exports[`QueryBuilderRelationshipPresenceSearch transformRelationshipPresenceToDSL function Presence operation 1`] = `
{
  "bool": {
    "must": {
      "exists": {
        "field": "data.relationships.collection.data.id",
      },
    },
  },
}
`;
